Fix overflow scroll

--- a/src/style.scss
+++ b/src/style.scss
@@ -302,7 +302,7 @@ $lightSteelBlue: #b0c4de;
         flex-direction: column;
         gap: 25px;
         height: 100vh;
-        overflow-y: scroll; 
+        overflow-y: auto; 
 
         h1 {
           font-size: 20px;
